# invoice-ocr-erp-automation-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample_parseur_output.json
scripts/: run_demo.py
src/invoice_automation/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py
src/invoice_automation/automation/: workflow_orchestrator.py  zapier_client.py
src/invoice_automation/erp/: models.py  repository.py  sade_connector.py
src/invoice_automation/extraction/: invoice_parser.py  ncf_validator.py  schemas.py
src/invoice_automation/ingestion/: base.py  email_ingestor.py  scanner_ingestor.py
src/invoice_automation/ocr/: base.py  parseur_client.py  tesseract_client.py
tests/: conftest.py  test_cli.py  test_email_ingestor.py  test_erp_repository.py  test_ingestion.py  test_invoice_parser.py  test_ncf_validator.py  test_ocr.py  test_pipeline.py  test_tesseract_client.py  test_zapier_client.py
